tests/language_modules/12_type_conflicts/invalid_semantics/result_assignment_error_type_mismatch.vf
module ResultAssignmentErrorTypeMismatch

error NotFound
error PermissionDenied

function load() returns Result<Integer, NotFound>
is
    return ok 1
end load

procedure main()
is
    let outcome: Result<Integer, PermissionDenied> = load()
end main

end ResultAssignmentErrorTypeMismatch